kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: default
  labels:
    app: test
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30000
  type: NodePort
